Bug 512743 - Alligator OMPL exports are not accepted by Newsfeed
Summary: Alligator OMPL exports are not accepted by Newsfeed
Status: RESOLVED FIXED
Alias: None
Product: Alligator
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-29 09:22 UTC by stephan.seitz
Modified: 2025-12-01 01:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stephan.seitz 2025-11-29 09:22:06 UTC
SUMMARY


STEPS TO REPRODUCE
1. Add RSS feeds to Alligator
2. Export feeds as OPML via "Manage Feeds" > "Export Feeds..." 
3. Try to import OPML using Newsflash (https://flathub.org/en/apps/io.gitlab.news_flash.NewsFlash)
4. Experience error from Newsflash about missing OMPL version attribute.
5. Edit exported OMPL
   1 │ <?xml version="1.0" encoding="UTF-8"?>
   2 │ <opml>
   3 │     <head/>
   4 │     <body version="1.0">
   5 │         <outline xmlUrl="https://planet.kde.org/index.xml" title="Planet KDE | English"/>
   6 │         <outline xmlUrl="https://www.tagesschau.de/index~rss2.xml" title="tagesschau.de - die erste Adresse für Nachrichten und Information"/>
   7 │         <outline xmlUrl="https://www.phoronix.com/rss.php" title="Phoronix"/>
   8 │         <outline xmlUrl="https://thisweek.gnome.org/index.xml" title="This Week in GNOME"/>
   9 │         <outline xmlUrl="https://this-week-in-rust.org/rss.xml" title="This Week in Rust"/>
  10 │         <outline xmlUrl="https://planet.gnome.org/rss20.xml" title="Planet GNOME"/>
  11 │         <outline xmlUrl="https://selfh.st/rss/" title="selfh.st"/>
  12 │         <outline xmlUrl="" title=""/>
  13 │         <outline xmlUrl="https://www.heise.de/rss/heise.rdf" title="heise online News"/>
  14 │         <outline xmlUrl="https://www.theregister.com/headlines.rss" title="The Register"/>
  15 │     </body>
  16 │ </opml>

   Change <opml> to <opml version="1.0">

6. Newsflash accepts edited OPML

OBSERVED RESULT

Newsflash rejects unmodified OPML from Alligator

EXPECTED RESULT

Newsflash accepts unmodified OPML from Alligator

SOFTWARE/OS VERSIONS
Alligator 04ae06cd77807c1d792b6e11ff6b85e4a1c75fe9 (git master November 29th 2025)

(available in the Info Center app, or by running `kinfo` in a terminal window)
Operating System: Ubuntu 12
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.21.0
Qt Version: 6.11.0
Kernel Version: 6.17.0-6-generic (64-bit)
Graphics Platform: Wayland
Processors: 20 × Intel® Core™ i9-10900X CPU @ 3.70GHz
Memory: 32 GiB of RAM (31.0 GiB usable)
Graphics Processor: NVIDIA GeForce RTX 4070 SUPER

ADDITIONAL INFORMATION

I believe the version tag was erroneously set on <body> instead of <opml>. 
See example documents in https://opml.org/spec2.opml
See  https://en.wikipedia.org/wiki/OPML

So
Comment 1 stephan.seitz 2025-11-29 09:31:21 UTC
I created https://invent.kde.org/network/alligator/-/merge_requests/157
Comment 2 Devin Lin 2025-12-01 01:47:32 UTC
Git commit e492a5e10308124ed3e941ceb68bc3e4a8b4d755 by Devin Lin, on behalf of Stephan Seitz.
Committed on 01/12/2025 at 01:45.
Pushed by devinlin into branch 'master'.

Fix version attribute for OPML exports

OPML version was erroneously set on `<body>` instead of `<opml>`.
This prevented parsing by Newsflash (https://flathub.org/en/apps/io.gitlab.news_flash.NewsFlash).

See OMPL documents at https://en.wikipedia.org/wiki/OPML and https://opml.org/spec2.opml .

M  +1    -1    src/database.cpp

https://invent.kde.org/network/alligator/-/commit/e492a5e10308124ed3e941ceb68bc3e4a8b4d755