Fix version attribute for OPML exports

OPML version was erroneously set on `<body>` instead of `<opml>`.
This prevented parsing by Newsflash (https://flathub.org/en/apps/io.gitlab.news_flash.NewsFlash).

See OMPL documents at https://en.wikipedia.org/wiki/OPML and https://opml.org/spec2.opml .

BUG: 512743